fix: Allow external icon to truncate with link text

--- a/src/link/styles.scss
+++ b/src/link/styles.scss
@@ -59,7 +59,3 @@
 .icon-wrapper {
   white-space: nowrap;
 }
-
-.icon {
-  display: inline-block;
-}
